epochX/cudacpp/tput/logs_ggttgg_mad/log_ggttgg_mad_d_inl1_hrd1.txt

Building in /users/valassia/GPU2024/madgraph4gpu/epochX/cudacpp/gg_ttgg.mad/SubProcesses/P1_gg_ttxgg
BACKEND=cppavx2 (was cppauto)
OMPFLAGS=
FPTYPE='d'
HELINL='0'
HRDCOD='0'
HASCURAND=hasNoCurand
HASHIPRAND=hasNoHiprand
Building in BUILDDIR=build.auto_d_inl0_hrd0 for tag=avx2_d_inl0_hrd0_hasNoCurand_hasNoHiprand (USEBUILDDIR == 1)
make: Nothing to be done for 'gtestlibs'.
make: Nothing to be done for 'all'.

make: Nothing to be done for 'all'.

make: Nothing to be done for 'all'.

make: Nothing to be done for 'all'.

make: Nothing to be done for 'all'.

make: Nothing to be done for 'all'.

DATE: 2024-09-17_09:12:05

On uan01 [CPU: AMD EPYC 7A53 64-Core Processor] [GPU: AMD INSTINCT MI200]:
=========================================================================
runExe /users/valassia/GPU2024/madgraph4gpu/epochX/cudacpp/gg_ttgg.mad/SubProcesses/P1_gg_ttxgg/build.hip_d_inl1_hrd1/check_hip.exe -p 64 256 1 OMP=
INFO: The following Floating Point Exceptions will cause SIGFPE program aborts: FE_DIVBYZERO, FE_INVALID, FE_OVERFLOW
/users/valassia/GPU2024/madgraph4gpu/epochX/cudacpp/gg_ttgg.mad/SubProcesses/P1_gg_ttxgg/build.hip_d_inl1_hrd1/check_hip.exe: Floating point exception
     1,585,284,024      cycles:u                         #    2.916 GHz                      (75.24%)
         2,383,798      stalled-cycles-frontend:u        #    0.15% frontend cycles idle     (73.60%)
         5,588,685      stalled-cycles-backend:u         #    0.35% backend cycles idle      (74.30%)
     2,036,305,234      instructions:u                   #    1.28  insn per cycle         
                                                  #    0.00  stalled cycles per insn  (75.02%)
       0.580606077 seconds time elapsed
.........................................................................
runExe /users/valassia/GPU2024/madgraph4gpu/epochX/cudacpp/gg_ttgg.mad/SubProcesses/P1_gg_ttxgg/build.hip_d_inl1_hrd1/check_hip.exe -p 2048 256 1 OMP=
INFO: The following Floating Point Exceptions will cause SIGFPE program aborts: FE_DIVBYZERO, FE_INVALID, FE_OVERFLOW
/users/valassia/GPU2024/madgraph4gpu/epochX/cudacpp/gg_ttgg.mad/SubProcesses/P1_gg_ttxgg/build.hip_d_inl1_hrd1/check_hip.exe: Floating point exception
    22,138,389,204      cycles:u                         #    3.424 GHz                      (75.07%)
         3,668,578      stalled-cycles-frontend:u        #    0.02% frontend cycles idle     (75.13%)
         8,480,796      stalled-cycles-backend:u         #    0.04% backend cycles idle      (75.08%)
    19,767,092,627      instructions:u                   #    0.89  insn per cycle         
                                                  #    0.00  stalled cycles per insn  (74.88%)
       6.501829671 seconds time elapsed
-------------------------------------------------------------------------
runTest /users/valassia/GPU2024/madgraph4gpu/epochX/cudacpp/gg_ttgg.mad/SubProcesses/P1_gg_ttxgg/build.hip_d_inl1_hrd1/runTest_hip.exe
INFO: The following Floating Point Exceptions will cause SIGFPE program aborts: FE_DIVBYZERO, FE_INVALID, FE_OVERFLOW
[  PASSED  ] 4 tests.
DEBUG: MEK (no multichannel) processed 512 events across 123 channels { no-multichannel : 512 }
INFO: No Floating Point Exceptions have been reported
DEBUG: MEK (channelid array) processed 512 events across 123 channels { 2 : 32, 3 : 32, 4 : 32, 5 : 32, 6 : 32, 7 : 32, 8 : 32, 9 : 32, 10 : 32, 11 : 32, 12 : 32, 13 : 32, 14 : 32, 15 : 32, 16 : 32, 17 : 32 }
INFO: No Floating Point Exceptions have been reported
-------------------------------------------------------------------------
cmpExe /users/valassia/GPU2024/madgraph4gpu/epochX/cudacpp/gg_ttgg.mad/SubProcesses/P1_gg_ttxgg/build.hip_d_inl1_hrd1/check_hip.exe --common -p 2 64 2
cmpExe /users/valassia/GPU2024/madgraph4gpu/epochX/cudacpp/gg_ttgg.mad/SubProcesses/P1_gg_ttxgg/build.hip_d_inl1_hrd1/fcheck_hip.exe 2 64 2
Avg ME (C++/GPU)   = 
Avg ME (F77/GPU)   = 6.6266731198158101E-004
  File "<string>", line 1
    me1=; me2=6.6266731198158101E-004; reldif=abs((me2-me1)/me1); print('Relative difference =', reldif); ok = reldif <= 5E-3; print ( '%s (relative difference %s 5E-3)' % ( ('OK','<=') if ok else ('ERROR','>') ) )
        ^
SyntaxError: invalid syntax
